--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 @charset "UTF-8";
 /*!
 * Start Bootstrap - Agency v7.0.11 (https://startbootstrap.com/theme/agency)
@@ -63,7 +64,12 @@
   --bs-body-color: #212529;
   --bs-body-bg: #fff;
 }
-
+@font-face {
+  font-family: 'Shilla_Gothic-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/Shilla_Gothic-Bold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 *,
 *::before,
 *::after {
@@ -640,9 +646,9 @@ height:376px;
   /* border-radius: 20px; */
 }
 .img-fluid2 {
-  max-width: 100%;
-  height: 20rem;
-  border-radius: 0px;
+
+  width: 950px;
+  height: 704px;
 }
 .pic > .img-fluid {
   width:27vw;
@@ -11909,7 +11915,7 @@ header.masthead .masthead-heading {
   color: #FFFFFF; */
   /* position:absolute;
   top:0; */
-  font-family: 'BM JUA_OTF';
+  font-family: 'Shilla_Gothic-Bold';
 font-style: normal;
 font-weight: 400;
 font-size: 80px;
@@ -11934,14 +11940,12 @@ right: 11.05%;
 top: 20%;
 bottom: 23.75%; */
 
-font-family: 'BM Jua';
+font-family: 'Apple SD Gothic Neo';
 font-style: normal;
-font-weight: 400;
-font-size: 44px;
-line-height: 45px;
+font-weight: 800;
+font-size: 32px;
+line-height: 38px;
 text-align: center;
-vertical-align: center;
-text-transform: capitalize;
 
 color: #FFFFFF;
 
@@ -12587,6 +12591,7 @@ li.group a  {
   align-items: center; */
   padding-top: 10px;
   padding-bottom:10px;
+  border-radius:6px;
 
 }
 .next {
