--- a/start/css/main.css
+++ b/start/css/main.css
@@ -3,14 +3,14 @@
 html, body {
   margin: 0;
   padding: 0;
-  /* height: 100%; */
+  height:100%;
+  width:100%;;
 }
-/* #main{
-  /* margin-top: 5rem; 
-  margin-bottom:5rem;
-  padding-top: 10rem;
-  /* padding-bottom: 30rem; 
-} */
+#main{
+  position:absolute;
+  width:1920px;
+  height:1080px;
+} 
 #qna {
 
   /* margin-top: 5rem; */
@@ -52,22 +52,23 @@ html, body {
 }
 .stbtn{
   
-  font-family: 'BM JUA_OTF';
+  font-family: 'Apple SD Gothic Neo';
   font-style: normal;
-  font-weight: 400;
-  font-size: 44px;
-  line-height: 45px;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 38px;
   text-align: center;
-  text-transform: capitalize;
   
-  background: #17FF75;
+  color: #FFFFFF;
+  
+  background: #1D2EFF;
   border-radius: 10px;
-    color: #FFFFFF;
-   position: absolute;
-       width: 230px;
-       height: 80px;
-       left: 861px;
-       top: 802px;
+ 
+    position: absolute;
+    width: 170px;
+    height: 70px;
+    left: 875px;
+    top: 870px;
   
 }
 .stbtn:hover{
