--- a/start/css/qna.css
+++ b/start/css/qna.css
@@ -7,25 +7,24 @@ position: absolute;
 width: 575px;
 height: 34px;
 left: 687px;
-top: 333px;
+top: 330px;
 display: block;
-/* 소제목 */
-
 font-family: 'Apple SD Gothic Neo';
 font-style: normal;
 font-weight: 700;
-font-size: 28px;
-line-height: 34px;
-/* identical to box height */
-
-
+font-size: 36px;
+line-height: 43px;
 align-items: center;
 text-align: center;
-color:#FFFFFF;
+letter-spacing: -0.025em;
+text-transform: lowercase;
+color: #1FFF79;
+
 }
+
  .answerBox{
   position:absolute;
-  margin-top:458px;
+  margin-top:440px;
   margin-left:646px;
   display:block;
   align-items: center;
@@ -34,8 +33,8 @@ color:#FFFFFF;
 
 .answerList{
   
-  background: #FFFFFF;
-  border: 3px solid #1D2EFF;
+  background: #000;
+  border: 1.5px solid #FFFFFF;
   border-radius: 10px;
   box-sizing: border-box;
   width:627px;
@@ -51,12 +50,12 @@ color:#FFFFFF;
   align-items: center;
   text-align: center;
 
-  color: #1D2EFF;
+  color: #FFFFFF;
 }
 
 
 .answerList:hover, .answerList:focus{
-  background-color: #1D2EFF;
-  color:#FFFFFF;
-  border: 3px solid #1D2EFF;
+  background-color: #1FFF79;
+  color:#000;
+  border: 0;
 }
