--- a/start/css/result.css
+++ b/start/css/result.css
@@ -2,46 +2,146 @@
   display:none;
     background-color:#000;
     /* text-align: center; */
-    border-radius: 20px;
-    padding: 10% 10%;
-    
+    /* border-radius: 20px;
+    padding: 10% 10%; */
+  position:absolute;
+  left: 0px;
+  width:1920px;
+  height:2000px;
+  top:371px;
+  color:#FFFFFF;
+ 
 }
 .resultname{
-  font-size:24px;
-  
+  position: absolute;
+width: 969px;
+height: 48px;
+left: 475px;
+top: 0px;
+font-family: 'Apple SD Gothic Neo';
+font-style: normal;
+font-weight: 600;
+font-size: 40px;
+line-height: 48px;
+/* identical to box height */
+
+text-align: center;
+text-transform: lowercase;
+
+color: #FFFFFF;
+}
+#resultImg{
+
+  position: absolute;
+width: 950px;
+height: 704px;
+left: 485px;
+top: 119px;
 }
 h1{
-  font-size:30px;
+  font-size:40px;
   font-family: 'Apple SD Gothic Neo';
-  color: #000;
+  color: #FFFFFF;
 }
 .s1{
-  color: #1D2EFF;
+  color: #1FFF79;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 60px;
 }
 h2 {
-  font-size:22px;
   font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 34px;
+
+  color: #FFFFFF;
+}
+.resultDesc{
+  position: absolute;
+  width: 1427px;
+  height: 136px;
+  left: 242px;
+  top: 900px;
+  text-align: left;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -0.025em;
+  color: #FFFFFF;
+
 }
 .resultDesc1{
-  font-size: 16px;
+
   text-align: left;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -0.025em;
+  color: #FFFFFF;
 }
 .resultDesc2{
-  font-size: 16px;
+
   text-align: left;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -0.025em;
+  color: #FFFFFF;
 }
 .resultDesc3{
-  font-size: 16px;
   text-align: left;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -0.025em;
+  color: #FFFFFF;
 }
 
 .testbtn{
-  color:white;
-  background-color: #1D2EFF;
-  font-size: 20px;
-  font-weight:bold;
+  background-color: #1FFF79;
   border: 0px;
-  border-radius: 5px;
+  margin-top:81px;
+  position: absolute;
+  width: 200px;
+  height: 69.57px;
+  left:617px;
+
+  text-align: center;
+  font-family: 'Apple SD Gothic Neo';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 38px;
+  text-align: center;
+  text-transform: capitalize;
+  border-radius: 10px;
+  color: #000000;
+
+
+}
+
+.resetbtn{
+  position: absolute;
+width: 83px;
+height: 70px;
+left: 675px;
+ margin-top:203px;
+ background-color:#000;
+ border:0;
+ outline: 0;
+
 }
 
 /* .testbtn:hover{
